--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -8645,6 +8645,276 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Block ALEX - can be later deleted"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Micro-Preprocessing (Alex - can be later deleted once we have the final big preprocessed dataset)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# The global preprocessing is not done yet (Sunday, Oct 20), so in order not to be stuck, I need to work with my own data and preprocessing. \n",
+        "# Also, I dont get how the download of the most updated dataset is performed above. (the first Andreas one, but loading it up from here. This can be changed later: EU_all_current_shared.parquet)\n",
+        "# I will also load here libaries, so that I dont need to run the cells above\n",
+        "\n",
+        "# import libraries\n",
+        "\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "\n",
+        "# enabling the display of all columns\n",
+        "pd.set_option('display.max_rows', None)\n",
+        "pd.set_option('display.max_columns', None)\n",
+        "\n",
+        "# reading the file\n",
+        "\n",
+        "df=pd.read_parquet(r'C:\\Users\\alexa\\Downloads\\ProjectCO2--no Gibhub\\EU_Alex\\Data\\EU all_current_shared.parquet')\n",
+        "\n",
+        "# Filter data from 2018 to 2023\n",
+        "df = df[df['year'].between(2018, 2023)]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Check summary\n",
+        "\n",
+        "# enabling the display of all columns\n",
+        "pd.set_option('display.max_rows', None)\n",
+        "pd.set_option('display.max_columns', None)\n",
+        "\n",
+        "# Get the data types of each column\n",
+        "data_types = df.dtypes\n",
+        "\n",
+        "# Get the number of unique values for each categorical column\n",
+        "unique_values = df.select_dtypes(include=['int64', 'float64', 'object', 'category', 'bool']).nunique()\n",
+        "\n",
+        "# Get the percentage of missing values for each column\n",
+        "missing_values = df.isnull().mean() * 100\n",
+        "\n",
+        "# Combine the information into a DataFrame\n",
+        "summary_df = pd.DataFrame({\n",
+        "    'Data Type': data_types,\n",
+        "    'Unique Values': unique_values,\n",
+        "    'Missing Values (%)': missing_values\n",
+        "})\n",
+        "\n",
+        "# Sort the summary DataFrame by the percentage of missing values in descending order\n",
+        "summary_df = summary_df.sort_values(by='Missing Values (%)', ascending=False)\n",
+        "\n",
+        "# Print the summary DataFrame\n",
+        "print(summary_df)\n",
+        "\n",
+        "# Display the cleaned DataFrame shape\n",
+        "print(df.shape)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Colums to exclude from the analysis: De, ech, RLFI, Vf, Ct, Cn, Cr, IT, Non_Electric_Car, Electric range (km),z (Wh/km) \n",
+        "\n",
+        "- Deviation factor (DE): In order to understand the DE, one has first to understand the context: \n",
+        "\n",
+        "** CO2MPAS is a vehicle simulation model for the calculation of CO2 emissions, energy, and fuel consumption from passenger cars and light commercial vehicles. It uses experimental data, retrieved from chassis dyno or on-road tests, to simulate the operation of vehicles under different operating conditions.The CO2MPAS model is able to provide the difference in CO2 emissions under the two different test procedures.\n",
+        "\n",
+        "The WLTP is the new and more realistic procedure for the emission type-approval of light duty vehicles which replaces the old and outdated NEDC procedure starting from 2017. The use CO2MPAS for the purpose of correlating CO2 emissions determined on the NEDC and the WLTP is set out in Commission Implementing Regulations (EU) 2017/1152 (light commercial vehicles) and 2017/1153 (passenger cars).\n",
+        "\n",
+        "The correlation of CO2 emission values is required to ensure a transition from NEDC based CO2 emission targets to targets based on WLTP emissions under Regulation (EU) 2019/631 setting out CO2 emission performance standards for light duty vehicles.\n",
+        "\n",
+        "In order to ensure that the correlated NEDC values are correct, 10% of the vehicle interpolation families that are subject to a CO2MPAS simulation are randomly selected for a physical vehicle test, using the “DICE” module of \n",
+        "CO2MPAS. For each such test, a deviation factor (De) should be calculated and recorded in the type approval certificate and the certificate of conformity. \n",
+        "\n",
+        "** The De expresses the deviation between the CO2 emissions determined through the physical vehicle test and the CO2 emissions declared by the manufacturer in view of the CO2MPAS simulation.\n",
+        "\n",
+        "If, for one or more interpolation families of a manufacturer, the De is higher than 0.04, this triggers the calculation of a correction factor, by which the average specific CO2 emissions of the manufacturer will be multiplied. \n",
+        "\n",
+        "Nearly all values are missing. \n",
+        "\n",
+        "- ech und RLFI: Meaning is not clear and nearly all values missing.\n",
+        "\n",
+        "- Verification factor (Vf): The application of a correction factor may also be triggered by the presence of a verification factor (Vf) of 1 for one or more interpolation families of a manufacturer. The Vf is recorded \n",
+        "as “1” in the type approval certificate if the type approval authority finds that the input data for the correlation procedure as reported by the manufacturer were incorrect or where it has justified reasons to deem the CO2 value declared by the manufacturer to be too low. - Most of verification factors since 2018 are 1\n",
+        "\n",
+        "\n",
+        "- Commercial name(Cn): A vehicle identifier. This is a categorical variable. It is interesting that in previous analyses the same car sold accross different countries show significant difference in Ewltp emissions. However,\n",
+        "the data quality is low, and with nearly 30.000 uniques values, it would pose a challenge for encoding. \n",
+        "\n",
+        "- Category of vehicle type approved (Ct) and Category of vehicle registered (Cr): Here the Cr superseeds Ct. But it is irrelevant at the end, since ALL the data set is of the category M1 (light passenger vehicles )  \n",
+        "\n",
+        "\n",
+        "                              Columns to be temporarily excluded for modeling exercise (other team members may want to work with this part):\n",
+        "\n",
+        "IT: Code for the use of eco-innovation technologies. Types are Lights,Alternators, Thermal,Kinetic, Solar, etc (see pager Eco-Innovations, 2018). However, the coding is unclear.(Erwltp (g/km) was already removed by Tillman/ Andreas)\n",
+        "\n",
+        "Mk: Make\n",
+        "Z: Electric energy consumption"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# List of columns to be exclude from analysis \n",
+        "\n",
+        "columns_to_remove = [\n",
+        "    'De',\n",
+        "    'ech', \n",
+        "    'RLFI',\n",
+        "    'Electric range (km)',\n",
+        "    'Vf',\n",
+        "    'z (Wh/km)',\n",
+        "    'Ernedc (g/km)',\n",
+        "    'Erwltp (g/km)',\n",
+        "    'IT',\n",
+        "    'Date of registration',       \n",
+        "    'MMS',\n",
+        "    'Enedc (g/km)',\n",
+        "    'VFN',\n",
+        "    'Mp',\n",
+        "    'Ve',\n",
+        "    'Cr',\n",
+        "    'Cr',\n",
+        "    'Tan',\n",
+        "    'Va',\n",
+        "    'Cn',\n",
+        "    'Ct',\n",
+        "    'Mk',\n",
+        "    'T',\n",
+        "    'Man',\n",
+        "    'Status',\n",
+        "    'ID',\n",
+        "    'r',\n",
+        "    '#identical occurences'  \n",
+        "\n",
+        "]\n",
+        "\n",
+        "# Exclude \n",
+        "df_reg = df.drop(columns=columns_to_remove, errors='ignore') "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Find any automakers that are not in the mapping\n",
+        "unmapped_automakers = df_regC[~df['Mh'].isin(automaker_mapping.values())]['Mh'].unique()\n",
+        "print(unmapped_automakers)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#Before making further mappings, let's check the the top 30 automakers by proportion\n",
+        "automaker_proportions = df_regC['Mh'].value_counts(normalize=True).head(30)\n",
+        "\n",
+        "# Create a bar plot for the top 30 automakers\n",
+        "plt.figure(figsize=(12, 6))\n",
+        "automaker_proportions.plot(kind='bar')\n",
+        "plt.title('Proportion of Top 30 Automakers')\n",
+        "plt.xlabel('Automaker')\n",
+        "plt.ylabel('Proportion')\n",
+        "plt.xticks(rotation=90)\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Now let's check the importance of the automakers that form 80% of the Data\n",
+        "# Calculate the frequency of each country\n",
+        "\n",
+        "automaker_counts = df_regC['Mh'].value_counts().head(30)\n",
+        "\n",
+        "# Calculate the cumulative percentage of entries for each country\n",
+        "automaker_percentage = (automaker_counts/ automaker_counts.sum()).cumsum() * 100\n",
+        "\n",
+        "# Filter to get the countries that form the first 80% of entries\n",
+        "automaker_80_percent = automaker_percentage[automaker_percentage <= 80]\n",
+        "\n",
+        "# Print the countries and their cumulative percentages\n",
+        "print(automaker_80_percent)\n",
+        "\n",
+        "# Visualize the cumulative distribution of countries\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "plt.plot(automaker_percentage.index, automaker_percentage.values, marker='o', linestyle='-')\n",
+        "plt.axhline(80, color='r', linestyle='--', label='80% threshold')\n",
+        "plt.xticks(rotation=45)\n",
+        "plt.title('Cumulative Distribution of automaker entries')\n",
+        "plt.xlabel('automaker')\n",
+        "plt.ylabel('Cumulative Percentage')\n",
+        "plt.legend()\n",
+        "plt.grid(True)\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "#We can retain the am forming 80% of the data and drop the rest. Thereby reducing significantly the number of extra columns that encoding will produce\n",
+        "\n",
+        "df_regC.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# We retain the first 8\n",
+        "\n",
+        "# List of automakers to retain\n",
+        "automakers_to_keep = ['VOLKSWAGEN', 'BMW', 'mercedes', 'audi', 'SKODA', 'SEAT', 'RENAULT', 'ford']\n",
+        "\n",
+        "# Filter the DataFrame to retain only rows where 'Country' is in the list of countries_to_keep\n",
+        "df_regCA = df_regC[df_regC['Mh'].isin(automakers_to_keep)]\n",
+        "\n",
+        "# Check the shape of the filtered DataFrame to ensure the filtering worked\n",
+        "print(\"Shape of the filtered DataFrame:\", df_regCA.shape)\n",
+        "\n",
+        "#At this stage the Data is preprocessed to run ML models. \n",
+        "#Since the handling of outliers are needed for i.a.Linear Regression and k-Nearest Neighbors but not for Decision Trees and Random Forests. This step will be done when every model is run.\n",
+        "#The stages done until here will be saved as a separate datafile.  "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Save the dataframe as a Parquet file\n",
+        "#df_regCA.to_parquet('df_regCA.parquet', engine='pyarrow', index=False)\n",
+        "\n",
+        "df_regCA.to_parquet(r'C:\\Users\\alexa\\Downloads\\ProjectCO2--no Gibhub\\EU_Alex\\DataPipeline\\EU all_current_shared_preprocessed_Alex.parquet', index=False)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "igUio9IE26yp"
       },
