Updated main part 2

--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -7520,135 +7520,24 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ihtkbCtk26yj"
-      },
-      "source": [
-        "# 1.H Drop all data that does not contain target variable Ewltp (g/km)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {
-        "id": "YSJJq4jN26yj"
-      },
-      "outputs": [],
-      "source": [
-        "# See utils_CO2.py "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "7Wn8u2jS26yk"
-      },
-      "source": [
-        "# 1. I Delete columns due to irrelevance or correlation"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {
-        "id": "W4bgsKYO26yk"
-      },
-      "outputs": [],
-      "source": [
-        "# See utils_CO2.py "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "-rA5sD5z26yk"
-      },
-      "source": [
-        "# 1.J Identify electric cars\n",
-        "+ identify electric (or hybrid) cars by looking at electric range and electric capacity\n",
-        "+ making separate column whichs marks the non electric cars\n",
-        "+ fill then all the nan values in electri range and electric capacity with 0 (because they have non, which is equal to 0)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {
-        "id": "mz6TMCS526yl"
-      },
-      "outputs": [],
-      "source": [
-        "# See utils_CO2.py "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "tGsWAodQnMcx"
-      },
-      "source": [
-        "# 1.K Selecting years"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {
-        "id": "hORd2iAjnMcx"
-      },
-      "outputs": [],
-      "source": [
-        "# See utils_CO2.py "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "zejSqtV726yl"
-      },
-      "source": [
-        "# 1.L Outlier Handling"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "1v-Nmh_226yl"
-      },
-      "source": [
-        "+ Input Andreas: Outlier rausschmeißen oder median einfüllen\n",
-        "+ Outlier handling function (IQR factor ab dem als Outlier gewertet wird)\n",
-        "+ Zusätzlich in die Funktion: ersetzen durch median oder row delete"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 10,
-      "metadata": {
-        "id": "w_ExMfME26yn"
-      },
-      "outputs": [],
-      "source": [
-        "# See utils_CO2.py "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 27,
-      "metadata": {
-        "id": "fRq1XII326yn"
-      },
-      "outputs": [],
-      "source": [
-        "# See utils_CO2.py \n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "5avlyLVG26yn"
       },
       "source": [
-        "# 1.M Summary Pipeline Part 2"
+        "# 1.M Summary Pipeline Part 2\n",
+        "All functions can be seen with description in the utils_co2.py function conglomeration \n",
+        "This will be done in the summary of data treatment \n",
+        "- taking the dataframe coming from renaming/mapping categories above\n",
+        "- drop rows without target values \n",
+        "- declare and drop irrelevant columns \n",
+        "- filter df by year (default everything after 2018)\n",
+        "+ Identify electric cars\n",
+        "+ identify electric (or hybrid) cars by looking at electric range and electric capacity\n",
+        "+ making separate column whichs marks the non electric cars\n",
+        "+ fill then all the nan values in electri range and electric capacity with 0 (because they have non, which is equal to 0)\n",
+        "- Outlier handling \n",
+        "- Outlier handling function (IQR factor ab dem als Outlier gewertet wird)\n",
+        "- Zusätzlich in die Funktion: ersetzen durch median oder row delete\n",
+        "+ give to the next steps "
       ]
     },
     {
@@ -7906,7 +7795,7 @@
       ],
       "source": [
         "# Load data\n",
-        "df = load_data_local('EU_all_current_shared.parquet')\n",
+        "df = load_data_local('EU_all_current_shared_Okt_23.parquet')\n",
         "inspect_data(df)"
       ]
     },
