--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -9456,12 +9456,389 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ysDXO95N26y7"
+      },
+      "outputs": [],
+      "source": [
+        "#Also introduced by Tillman\n",
+        "\n",
+        "# The beginning of each section\n",
+        "# Loading the data frame\n",
+        "# Inspect the data frame\n",
+        "df = load_data_local('Data_Preprocessed_Step1.csv', data_path)\n",
+        "\n",
+        "# Oder eben\n",
+        "\n",
+        "# df = load_data_gdrive(file_name=?)\n",
+        "inspect_data(df)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "ctXJFzkp26y6"
       },
       "source": [
         " # 3. Decision Tree Regressor (Alex)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        " ## Loading Libraries and Data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# import libraries\n",
+        "\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "\n",
+        "from sklearn import tree\n",
+        "from sklearn.tree import plot_tree\n",
+        "from sklearn.tree import DecisionTreeRegressor\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import mean_squared_error, r2_score\n",
+        "\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "\n",
+        "\n",
+        "# enabling the display of all columns\n",
+        "pd.set_option('display.max_rows', None)\n",
+        "pd.set_option('display.max_columns', None)\n",
+        "\n",
+        "# reading the file\n",
+        "\n",
+        "df=pd.read_parquet(r'C:\\Users\\alexa\\Downloads\\ProjectCO2--no Gibhub\\EU_Alex\\DataPipeline\\EU all_current_shared_preprocessed_Alex.parquet')\n",
+        "\n",
+        "# Filter data from 2018 to 2023\n",
+        "df = df[df['year'].between(2018, 2023)]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Micro-preprocessing: Not needed"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Data preparation for modeling"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Step 1: Separate target variable 'Ewltp (g/km)' and features\n",
+        "\n",
+        "target_column = 'Ewltp (g/km)'  # Target column\n",
+        "X = df.drop(columns=[target_column])  # Features (dropping the target)\n",
+        "y = df[target_column]  # Target variable\n",
+        "\n",
+        "# Step 2: Encode categorical variables (one-hot encoding for categorical columns)\n",
+        "\n",
+        "categorical_cols = X.select_dtypes(include=['category']).columns.tolist()  # Select categorical columns\n",
+        "encoder = OneHotEncoder(sparse_output=False, drop='first')  # Drop first to avoid multicollinearity\n",
+        "X_encoded = encoder.fit_transform(X[categorical_cols])\n",
+        "\n",
+        "# Step 3: Create DataFrame for encoded categorical variables and combine with numeric variables\n",
+        "\n",
+        "X_encoded_df = pd.DataFrame(X_encoded, columns=encoder.get_feature_names_out(categorical_cols))\n",
+        "X_num = X.select_dtypes(include=['float32'])  # Select numerical columns\n",
+        "X_combined = pd.concat([X_num.reset_index(drop=True), X_encoded_df.reset_index(drop=True)], axis=1)\n",
+        "\n",
+        "# Step 4: Split the data into training and test sets (80% train, 20% test)\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X_combined, y, test_size=0.2, random_state=42)\n",
+        "\n",
+        "# Step 5: Scale the numerical variables (including the target, if necessary)\n",
+        "\n",
+        "scaler = StandardScaler()\n",
+        "\n",
+        "# Scaling X (numerical features)\n",
+        "\n",
+        "X_train_scaled = scaler.fit_transform(X_train)\n",
+        "X_test_scaled = scaler.transform(X_test)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Modeling Performance and Interpretation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Step 1: Train a Decision Tree Model\n",
+        "dt_model = DecisionTreeRegressor(random_state=42)\n",
+        "dt_model.fit(X_train_scaled, y_train)\n",
+        "\n",
+        "# Step 2: Make Predictions\n",
+        "y_pred = dt_model.predict(X_test_scaled)\n",
+        "\n",
+        "# Step 3: Evaluate the Model \n",
+        "mse = mean_squared_error(y_test, y_pred)\n",
+        "r2 = r2_score(y_test, y_pred)\n",
+        "\n",
+        "print(f\"Mean Squared Error: {mse}\")\n",
+        "print(f\"R-squared: {r2}\")\n",
+        "\n",
+        "\n",
+        "####\n",
+        "# Interpretation: \n",
+        "# With the R-squared of 0.99 indicating that the Decision Tree model is explaining 99.33% of the variance in the training set and an extremely low MSE on the training set (which suggests that the model is performing almost perfectly on the training data). I can safely discern that the model is overfitting. \n",
+        "#Next steps will be pruning and cross-validation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# This part is bugged\n",
+        "\n",
+        "# Step 6: Visualize the Decision Tree \n",
+        "\n",
+        "# Step 6: Visualize the Decision Tree (corrected) --> error: IndexError: index 30 is out of bounds for axis 0 with size 13\n",
+        "\n",
+        "#plt.figure(figsize=(20, 10))\n",
+        "#plot_tree(dt_model, filled=True, feature_names=X.columns, rounded=True)\n",
+        "#plt.title('Decision Tree Visualization')\n",
+        "#plt.show()\n",
+        "\n",
+        "# Other trials --> error'numpy.ndarray' object has no attribute 'columns'.Pertaining this line: --> 4 plot_tree(dt_model, filled=True, feature_names=X_train_scaled.columns, rounded=True)\n",
+        "#plt.figure(figsize=(20, 10))\n",
+        "#plot_tree(dt_model, filled=True, feature_names=X_train_scaled.columns, rounded=True)\n",
+        "#plt.title('Decision Tree Visualization')\n",
+        "#plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Interpretability: Feature Importance"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Step 4: Get feature importance from the model\n",
+        "feature_importances = dt_model.feature_importances_\n",
+        "\n",
+        "# Step 5: Sort feature importances in descending order\n",
+        "indices = np.argsort(feature_importances)[::-1]\n",
+        "\n",
+        "# Step 6: Create a plot of the feature importances\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "\n",
+        "# Plot the top 20 most important features\n",
+        "plt.bar(range(len(feature_importances)), feature_importances[indices], align='center')\n",
+        "\n",
+        "# Add feature names as labels to the x-axis\n",
+        "plt.xticks(range(len(feature_importances)), X_train.columns[indices], rotation=90)\n",
+        "\n",
+        "# Add title and labels\n",
+        "plt.title(\"Feature Importance from Decision Tree\")\n",
+        "plt.xlabel(\"Feature\")\n",
+        "plt.ylabel(\"Importance\")\n",
+        "\n",
+        "# Show the plot\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "####\n",
+        "\n",
+        "#Interpretation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Multicollinearity and Overfitting: Pruning and Elastic Net with CV "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Decision Trees handle internally multicollinearity, but are prone to overfitting. Lets try pruning to address the later.\n",
+        "\n",
+        "#Pruning\n",
+        "\n",
+        "dt_model = DecisionTreeRegressor(max_depth=5, random_state=42)\n",
+        "dt_model.fit(X_train_scaled, y_train)\n",
+        "\n",
+        "y_pred = dt_model.predict(X_test_scaled)\n",
+        "\n",
+        "mse = mean_squared_error(y_test, y_pred)\n",
+        "r2 = r2_score(y_test, y_pred)\n",
+        "\n",
+        "print(f\"Mean Squared Error: {mse}\")\n",
+        "print(f\"R-squared: {r2}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Cross validation - No need to use pre-scaled data for cross-validation but it needs encoded X\n",
+        "\n",
+        "scores = cross_val_score(dt_model, X_combined, y, cv=5, scoring='r2')\n",
+        "print(f\"Cross-validated R-squared: {scores.mean()}\")\n",
+        "\n",
+        "\n",
+        "####\n",
+        "\n",
+        "# Interpretation:\n",
+        "#After pruning the R-sqaured is 0.95 and the cross-validated R-squared of 0.94 indicates that the decision tree model explains a substantial portion of the variance\n",
+        "#in the target variable (Ewltp (g/km)) across the different folds of the cross-validation process. \n",
+        "# This suggests that the model generalizes well to unseen data and has a strong predictive power. Let's check Elastic Net with CV\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Elastic Net with CV - Decision Tree Regressor (40 min execution time)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#Decision trees expect not-scaled numerical data, but encoded categorical variables.\n",
+        "\n",
+        "# Step 1: Separate features (X) and target variable (y)\n",
+        "target_column = 'Ewltp (g/km)'  # Target column\n",
+        "X = df.drop(columns=[target_column])  # Features (dropping the target)\n",
+        "y = df[target_column]  # Target variable\n",
+        "\n",
+        "# Step 2: Encode categorical variables (one-hot encoding)\n",
+        "categorical_cols = X.select_dtypes(include=['category', 'object']).columns.tolist()  # Select categorical columns\n",
+        "\n",
+        "# Initialize the OneHotEncoder\n",
+        "encoder = OneHotEncoder(sparse_output=False, drop='first')  # Drop first to avoid multicollinearity\n",
+        "X_encoded = encoder.fit_transform(X[categorical_cols])\n",
+        "\n",
+        "# Create DataFrame for encoded categorical variables\n",
+        "X_encoded_df = pd.DataFrame(X_encoded, columns=encoder.get_feature_names_out(categorical_cols))\n",
+        "\n",
+        "# Combine encoded categorical variables with the numeric variables\n",
+        "X_num = X.select_dtypes(include=['float32', 'int64'])  # Select numerical columns\n",
+        "X_combined = pd.concat([X_num.reset_index(drop=True), X_encoded_df.reset_index(drop=True)], axis=1)\n",
+        "\n",
+        "# Step 3: Split into training and testing sets\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X_combined, y, test_size=0.2, random_state=42)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "RzEzSCE226y6"
+      },
+      "outputs": [],
+      "source": [
+        "# Define the parameter grid\n",
+        "\n",
+        "# Define the parameter grid for GridSearchCV\n",
+        "param_grid = {\n",
+        "    'max_depth': [None, 2, 5, 7],\n",
+        "    'min_samples_split': [2, 5, 8],\n",
+        "    'min_samples_leaf': [1, 2, 3]\n",
+        "}\n",
+        "\n",
+        "# Create a DecisionTreeRegressor instance\n",
+        "dt_model = DecisionTreeRegressor()\n",
+        "\n",
+        "# Create a GridSearchCV object\n",
+        "grid_search = GridSearchCV(estimator=dt_model, param_grid=param_grid, cv=5)\n",
+        "\n",
+        "# Fit the grid search to your data (use X_train instead of X_train_scaled)\n",
+        "grid_search.fit(X_train, y_train)\n",
+        "\n",
+        "# Get the best parameters and model\n",
+        "best_params = grid_search.best_params_\n",
+        "best_model = grid_search.best_estimator_\n",
+        "\n",
+        "# Make predictions using the best model\n",
+        "y_pred = best_model.predict(X_test)\n",
+        "\n",
+        "# Evaluate the model\n",
+        "mse = mean_squared_error(y_test, y_pred)\n",
+        "r2 = r2_score(y_test, y_pred)\n",
+        "\n",
+        "# Print the evaluation metrics\n",
+        "print(\"Best Parameters:\", best_params)\n",
+        "print(\"Mean Squared Error:\", mse)\n",
+        "print(\"R-squared:\", r2)\n",
+        "\n",
+        "# The code above is corrected but not tested.\n",
+        "# Result: Best Parameters: {'max_depth': None, 'min_samples_leaf': 3, 'min_samples_split': 8} / Mean Squared Error: 57322.07454577695 / R-squared: -23.515788791688205\n",
+        "# Feature Scaling: Decision trees are not sensitive to feature scaling, but you applied scaling (with X_train_scaled). This is likely unnecessary for decision \n",
+        "# trees and can sometimes lead to issues, particularly when the model expects data in its original form (e.g., non-scaled categorical variables).\n",
+        "# Feature Names Warning: The warning is caused by a mismatch between the \n",
+        "# original X_train (which had feature names) and X_train_scaled (which doesn't include feature names after scaling). Decision trees prefer having feature names for better interpretability.\n",
+        "\n",
+        "\n",
+        "####\n",
+        "\n",
+        "# Interpretation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 4. Ensemble: Random Forest Regressor (Alex)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Since decision trees tend to overfit, let's test an ensemble method, which consists of multiple Decision Trees. Each tree is trained on a random subset of the data, and random subsets of features are selected at each split. The final prediction is made by aggregating the predictions from all the trees (e.g., majority voting for classification or averaging for regression).\n",
+        "Like decision trees, random forest regressors expect unscaled data (num) but encoded variables (cat)"
       ]
     },
     {
@@ -9502,9 +9879,14 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "RzEzSCE226y6"
-      },
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": []
     },
@@ -9516,25 +9898,6 @@
       },
       "outputs": [],
       "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "ysDXO95N26y7"
-      },
-      "outputs": [],
-      "source": [
-        "# The beginning of each section\n",
-        "# Loading the data frame\n",
-        "# Inspect the data frame\n",
-        "df = load_data_local('Data_Preprocessed_Step1.csv', data_path)\n",
-        "\n",
-        "# Oder eben\n",
-        "\n",
-        "# df = load_data_gdrive(file_name=?)\n",
-        "inspect_data(df)"
-      ]
     },
     {
       "cell_type": "markdown",
