--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -11068,6 +11068,69 @@
         "# Create a confusion matrix to compare the true labels with the predicted labels\n",
         "pd.crosstab(y_test, y_pred_dnn, rownames=['Real Class'], colnames=['Class Predicted by DNN'])\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Linear Deep Learning Example"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Dense\n",
+        "from tensorflow.keras.optimizers import Adam\n",
+        "\n",
+        "# Load your dataset\n",
+        "# Example: df = pd.read_csv('your_data.csv')\n",
+        "\n",
+        "# Assuming 'target_column' is the numerical continuous target variable\n",
+        "X = df.drop(columns=['target_column'])\n",
+        "y = df['target_column']\n",
+        "\n",
+        "# Split data into training and testing sets\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+        "\n",
+        "# Normalize the data\n",
+        "scaler = StandardScaler()\n",
+        "X_train_scaled = scaler.fit_transform(X_train)\n",
+        "X_test_scaled = scaler.transform(X_test)\n",
+        "\n",
+        "# Build the model\n",
+        "model = Sequential()\n",
+        "\n",
+        "# Add input layer (number of neurons = number of features)\n",
+        "model.add(Dense(64, input_dim=X_train.shape[1], activation='relu'))\n",
+        "\n",
+        "# Hidden layers\n",
+        "model.add(Dense(64, activation='relu'))\n",
+        "model.add(Dense(32, activation='relu'))\n",
+        "\n",
+        "# Output layer (1 neuron for continuous target variable)\n",
+        "model.add(Dense(1, activation='linear'))\n",
+        "\n",
+        "# Compile the model\n",
+        "model.compile(optimizer=Adam(learning_rate=0.001), loss='mean_squared_error', metrics=['mae'])\n",
+        "\n",
+        "# Train the model\n",
+        "history = model.fit(X_train_scaled, y_train, validation_data=(X_test_scaled, y_test), epochs=100, batch_size=32)\n",
+        "\n",
+        "# Evaluate the model\n",
+        "loss, mae = model.evaluate(X_test_scaled, y_test)\n",
+        "print(f'Test Mean Absolute Error: {mae}')\n",
+        "\n",
+        "# Predict\n",
+        "y_pred = model.predict(X_test_scaled)\n"
+      ]
     }
   ],
   "metadata": {
