--- a/notebooks/Victor/g_colab__clone_repo_github.ipynb
+++ b/notebooks/Victor/g_colab__clone_repo_github.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -48,61 +34,57 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# mount drive\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "Vd52zd-C2Ymw",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "Vd52zd-C2Ymw",
         "outputId": "1f2bef21-d6ba-4e96-ef04-e38a2ef9cd1f"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
+      ],
+      "source": [
+        "# mount drive\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "2D7CJ_yffURF"
+      },
+      "outputs": [],
       "source": [
         "# clone repo into your google-drive.. select your path accordingly\n",
         "# from getpass import getpass\n",
         "# token = getpass('GitHub Token: ')\n",
         "# !git clone https://{token}@github.com/DataScientest-Studio/aug24_bds_int---co2.git /content/drive/MyDrive/aug24_bds_int---co2\n"
-      ],
-      "metadata": {
-        "id": "2D7CJ_yffURF"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Git commands - \"Workflow\""
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "07eJTYgG2ojp"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Git commands - \"Workflow\""
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Step 1: Mount Google Drive (if not already done)\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n"
-      ],
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -110,23 +92,24 @@
         "id": "q_W_ABbHxrR5",
         "outputId": "7fe6afed-04cd-4cb0-fee8-21e7e1baf3f4"
       },
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
+      ],
+      "source": [
+        "# Step 1: Mount Google Drive (if not already done)\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Step 2: Navigate to the cloned repository directory\n",
-        "%cd /content/drive/MyDrive/aug24_bds_int---co2\n"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -134,62 +117,61 @@
         "id": "g5kdfxmP3RlB",
         "outputId": "6c3b657a-38e0-4efe-b538-4ea5825aeaf1"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/content/drive/MyDrive/aug24_bds_int---co2\n"
           ]
         }
+      ],
+      "source": [
+        "# Step 2: Navigate to the cloned repository directory\n",
+        "%cd /content/drive/MyDrive/aug24_bds_int---co2\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Step 3: Add your e-mail/user name - only once per session\n",
-        "# (at start, after crash, afer disconnect)\n",
-        "!git config user.email \"nx10@hotmail.de\"\n",
-        "!git config user.name \"Operator-12\""
-      ],
+      "execution_count": 3,
       "metadata": {
         "id": "gmSsnNVHPlvI"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Step 3: Add your e-mail/user name - only once per session\n",
+        "# (at start, after crash, afer disconnect)\n",
+        "!git config user.email \"your_email\"\n",
+        "!git config user.name \"your_user_name\""
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Step 4: Stage the specific Jupyter notebook in the notebooks directory\n",
-        "!git add notebooks/DataPipeline.ipynb\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "57G2-qsKxyIe"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Step 4: Stage the specific Jupyter notebook in the notebooks directory\n",
+        "!git add notebooks/DataPipeline.ipynb\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Step 5: Commit your changes with a descriptive message\n",
-        "!git commit -m \"Testing functions in utils_CO continued\"\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "7f3vCgnWyT72"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Step 5: Commit your changes with a descriptive message\n",
+        "!git commit -m \"Testing functions in utils_CO continued\"\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Step 6: Fetch and See remote changes without merging them\n",
-        "!git fetch origin\n",
-        "!git log origin/main -n 5    # last 5 changes"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -198,11 +180,10 @@
         "id": "MV3OSUPQ5Sv7",
         "outputId": "900d7532-34b6-4275-cee7-0202127b6607"
       },
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "remote: Enumerating objects: 7, done.\u001b[K\n",
             "remote: Counting objects:  14% (1/7)\u001b[K\rremote: Counting objects:  28% (2/7)\u001b[K\rremote: Counting objects:  42% (3/7)\u001b[K\rremote: Counting objects:  57% (4/7)\u001b[K\rremote: Counting objects:  71% (5/7)\u001b[K\rremote: Counting objects:  85% (6/7)\u001b[K\rremote: Counting objects: 100% (7/7)\u001b[K\rremote: Counting objects: 100% (7/7), done.\u001b[K\n",
@@ -242,10 +223,20 @@
             "    Updated dnn preprocessing - Final\n"
           ]
         }
+      ],
+      "source": [
+        "# Step 6: Fetch and See remote changes without merging them\n",
+        "!git fetch origin\n",
+        "!git log origin/main -n 5    # last 5 changes"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "FSqnZks1ATcg"
+      },
+      "outputs": [],
       "source": [
         "# Step 7: Check the status of your working directory\n",
         "!git status\n",
@@ -260,15 +251,15 @@
         "# (either local or the last pushed commit, depending on what’s in your local history)\n",
         "# ! Irreversible Action: Any unsaved changes in the file will be permanently lost,\n",
         "## !git restore notebooks/DataPipeline.ipynb"
-      ],
-      "metadata": {
-        "id": "FSqnZks1ATcg"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "rRQAW-nozFm_"
+      },
+      "outputs": [],
       "source": [
         "# Step 8: Pull the latest changes from the remote repository (to avoid overwriting)\n",
         "!git pull origin main\n",
@@ -276,66 +267,56 @@
         "# Rebasing will \"replay\" your local commits on top of the latest commits from the remote branch,\n",
         "# creating a linear history. Use this option if you prefer to avoid a merge commit.\n",
         "# !git pull --rebase origin main\n"
-      ],
-      "metadata": {
-        "id": "rRQAW-nozFm_"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Step 9: Push your committed changes to GitHub\n",
-        "!git push origin main"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "4JirvibA0j_7"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Step 9: Push your committed changes to GitHub\n",
+        "!git push origin main"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# !git rebase --abort"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "2dVE9qjtCYT6"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# !git rebase --abort"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# !git stash"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "dTSJMcwaEwYA"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# !git stash"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# !git fetch origin"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "VlI3sVegSCbR"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# !git fetch origin"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Reset Your Local Branch to Match the Remote Branch:\n",
-        "# This will discard all local commits and changes that haven’t been pushed,\n",
-        "# resetting your branch to match origin/main.\n",
-        "# !git reset --hard origin/main"
-      ],
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -343,26 +324,45 @@
         "id": "B3Dyx4FKP9m4",
         "outputId": "c7292be2-982b-4c81-dfe6-e63d0dd5cd7d"
       },
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Updating files: 100% (50/50), done.\n",
             "HEAD is now at 4da2dd4 Just cleaned my OLD cell outputs\n"
           ]
         }
+      ],
+      "source": [
+        "# Reset Your Local Branch to Match the Remote Branch:\n",
+        "# This will discard all local commits and changes that haven’t been pushed,\n",
+        "# resetting your branch to match origin/main.\n",
+        "# !git reset --hard origin/main"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "ClQXBYWKP_xf"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
